--- a/portfolio.html
+++ b/portfolio.html
@@ -289,22 +289,13 @@
                     </a>
                 </div>
             </div>
-            <div class="footer-newsletter">
-                <p class="footer-newsletter__text">Zapisz się do newslettera</p>
-                <div class="footer-newsletter__box-send">
-                    <form>
-                        <label class="footer-email-window" for="email">
-                            <input class="footer-email-window__input" type="email" name="email" id="newsletter-email"
-                                placeholder="E-mail" required>
-                        </label>
-                    </form>
-                    <div class="footer-buttom-send-newsletter">
-                        <button data-modal-open class="buttom-newsletter" type="submit">Zapisz się</button>
-                        <svg class="send-icon-buttom" width="24px" height="24px">
-                            <use href="/goit-markup-hw-06/images/images4/symbol-defs-icon-reg.svg#icon-icon-send"></use>
-                        </svg>
-                    </div>
-                </div>
+            <form class="newsletter">
+                <label class="newsletter-label" for="mail" lang="pl">Zapisz się do newslettera
+                    <input class="newsletter-input" type="email" name="email" id="mail" placeholder="E-mail" /></label>
+                <button type="submit" class="newsletter-button" lang="pl">
+                    Zapisz się
+                </button>
+            </form>
     
             </div>
         </div>
