--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                     <p class="team__list-expert">Frontend Developer</p>   
                     <div class="team__social-link">
                         <a href="https://www.instagram.com/" class="social-link-icon" target="_blank" rel="noreferrer noopener">
-                            <svg width="20" height="20">
+                            <svg id="icon-instagram-team" width="20" height="20">
                                 <use href="./images/images4/symbol-defs.svg#icon-instagram"></use>
                             </svg>
                         </a>
@@ -366,20 +366,13 @@
                         </a>
                     </div>
                 </div>  
-                <div class="footer-newsletter">   
-                    <p class="footer-newsletter__text">Zapisz się do newslettera</p>
-                    <div class="footer-newsletter__box-send"> 
-                        <form> 
-                            <label class="footer-email-window" for="email"> 
-                                <input class="footer-email-window__input" type="email" name="email" id="newsletter-email" placeholder="E-mail" required>
-                            </label>
-                        </form> 
-                        <div class="footer-buttom-send-newsletter"> 
-                            <button data-modal-open class="buttom-newsletter" type="submit">Zapisz się</button> 
-                            <svg class="send-icon-buttom" width="24px" height="24px"><use href="/goit-markup-hw-06/images/images4/symbol-defs-icon-reg.svg#icon-icon-send"></use></svg>
-                        </div>
-                    </div>
-
+                    <form class="newsletter">
+                        <label class="newsletter-label" for="mail" lang="pl">Zapisz się do newslettera
+                            <input class="newsletter-input" type="email" name="email" id="mail" placeholder="E-mail" /></label>
+                        <button type="submit" class="newsletter-button" lang="pl">
+                            Zapisz się
+                        </button>
+                    </form>
                 </div>
         </div>
     </footer>
